syntax = "proto3";

package metadata;

option go_package = "dex-stats-sol/pb;pb";

message SupplyRequest {
  repeated string token_address = 1;
}

message SupplyInfo {
  bytes token_address = 1;
  string symbol = 2;
  uint32 decimals = 3;
  string total_supply = 4;
  string max_supply = 5;
  string circulating_supply = 6;
  string icon = 7;
  string name = 8;
}

message SupplyInfos {
  repeated SupplyInfo infos = 1;
}

service Metadata {
  rpc GetTokenSupplyByAddress(SupplyRequest) returns(SupplyInfos);
}
